# Conways-Game-of-Life

./: CMakeLists.txt  GameOfLife.sln  GameOfLife.vcxproj  GameOfLife.vcxproj.filters  README.md  imgui.ini
src/: main.cpp
src/common/: Vector2.hpp  colors.hpp  math.hpp  time.hpp
src/core/: EventManager.cpp  EventManager.hpp  GameOfLife.cpp  GameOfLife.hpp  Renderer.cpp  Renderer.hpp
src/core/imgui/: ImGuiManager.cpp  ImGuiManager.hpp  ImGuiWindow.hpp
src/core/object/: GameObject.hpp
src/gui/: InfoWindow.cpp  InfoWindow.hpp
src/objects/: Grid.cpp  Grid.hpp
